<resources>
  <string name="app_name">SysBus</string>
  <string name="ed_email">Email</string>
  <string name="ed_senha">Senha</string>
  <string name="login">Login</string>
  <string name="Cadastrar">Cadastrar</string>
  <string name="msg_campo_obrigatorio">Campo obrigatório</string>
  <string name="title_activity_main">MainActivity</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="title_activity_maps">Map</string>
  <string name="msg_erro_login">Email ou Senha incorretos!</string>
  <string name="user_nome">Nome</string>
  <string name="user_email">Email</string>
  <string name="user_senha">Senha</string>
  <string name="cadastrar">Cadastrar</string>
  <string name="msg_erro_cadastro">Cadastro Inválido</string>
  <string name="title_activity_maps_exemplo">Map</string>

  <string name="rotas">Rotas</string>
  <string name="sair">Sair</string>
  <string name="sobre">Sobre</string>
  <string name="tempo_splash">2500</string>
  <string name="paradas">Paradas</string>
  <string name="rota">Rota</string>

  <string name="texto_sobre">
    O aplicativo SysBus tem o objetivo de mostrar as paradas de Ônibus e rotas, como também horários.\n\n
    © Copyright SysBus
    \n\n
    Bruno Dantas
  </string>
</resources>
