<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:padding="@dimen/padding"
    android:background="@color/colorPrimaryDark"
    tools:context="com.dantas.bruno.sysbus.login.LoginActivity">

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="158dp"
    android:layout_height="106dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="32dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/sys"
    tools:layout_editor_absoluteY="60dp"/>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textColorHint="@android:color/white"
      android:layout_marginTop="53dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView">


    <EditText
        android:id="@+id/ed_email"
        android:backgroundTint="@android:color/white"
        android:hint="@string/ed_email"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_senha"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textColorHint="@android:color/white"
      android:layout_marginTop="28dp"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/til_email">

    <EditText
        android:id="@+id/ed_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:hint="@string/ed_senha"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        />
  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/bt_login"
      android:layout_width="170dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="29dp"
      android:text="@string/login"
      android:backgroundTint="@color/colorAccent"
      android:textColor="@android:color/black"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/til_senha"/>

  <Button
      android:id="@+id/bt_cadastrar"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/Cadastrar"
      android:textColor="@color/colorAccent"
      android:textStyle="bold"
      android:background="@null"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/bt_login"
      app:layout_constraintVertical_bias="0.786"/>

  <ProgressBar
    android:id="@+id/progress"
    style="?android:attr/progressBarStyle"
    android:visibility="gone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="29dp"
    app:layout_constraintTop_toBottomOf="@+id/bt_login"/>

  <TextView
    android:id="@+id/tv_msg_erro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/msg_erro_login"
    android:visibility="gone"
    android:textStyle="bold"
    android:textColor="@android:color/holo_red_dark"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@+id/imageView"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/til_email"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintVertical_bias="0.85"/>
</android.support.constraint.ConstraintLayout>
